affichage billet seul
Affichage d'un billet seul avec ses commentaires fonctionnel

--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,13 @@ article
     opacity: 0.8;
 }
 
+
+.commentaires
+{
+    background-color: aquamarine;
+    opacity: 0.8;
+}
+
 footer
 {
     margin-top : 5px;
