--- a/style/style.css
+++ b/style/style.css
@@ -48,12 +48,12 @@ article
 }
 
 
-.commentaires
+.comments
 {
     background-color: aquamarine;
     opacity: 0.8;
 }
-.ajoutCommentaire
+.addComment
 {
     background-color: #008f8f;
     opacity: 0.8;
