--- a/style/style.css
+++ b/style/style.css
@@ -10,11 +10,30 @@
 
 }
 
+@font-face {
+    font-family:"Cursivestandard";
+    src:url("font/Cursive_standard.eot?") format("eot"),url("font/Cursive_standard.woff") format("woff"),url("font/Cursive_standard.ttf") format("truetype"),url("font/Cursive_standard.svg#Cursivestandard") format("svg");font-weight:normal;font-style:normal;}
+
+
+@font-face {
+    font-family:"PakType Naqsh";
+    src:url("font/PakType_Naqsh_2_2.eot?") format("eot"),url("font/PakType_Naqsh_2_2.woff") format("woff"),url("font/PakType_Naqsh_2_2.ttf") format("truetype"),url("font/PakType_Naqsh_2_2.svg#PakTypeNaqsh") format("svg");font-weight:normal;font-style:normal;}
 
 body
 {
     background-image: url("img/bookBackground.jpg");
-    font-family : 'Cursif', sans-serif;
+
+}
+
+body, .btn {
+    font-family : 'Cursivestandard', sans-serif;
+    font-size: 1.2em;
+}
+
+h1,h2,h3
+{
+    font-family: "PakType Naqsh", sans-serif ;
+    font-size: 2em;
 }
 
 div
@@ -68,11 +87,7 @@ footer
 }
 
 
-h1,h2
-{
-    font-family: "Angelface", sans-serif ;
-    font-size: 3em;
-}
+
 
 
 .btnconnexion, .btndisconnexion
