--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,7 @@
 body
 {
     background-image: url("img/bookBackground.jpg");
+    width : 97vw;
 
 }
 
@@ -42,33 +43,52 @@ div
 }
 header
 {
-    padding : 10px 0;
+    padding : 10px 0 !important;
     margin-bottom : 5px;
+    border-bottom : black thick  ridge ;
 }
 
 header,footer
 {
+    position: fixed;
     background : #e9e9e9;
     padding : 10px 0;
-    opacity : 0.8;
+    z-index: 2;
+    height: 75px;
+    /*opacity : 0.8;*/
+    margin-bottom: 0;
+
 }
 
+footer {
+    bottom : 0;
+}
 nav
 {
-    opacity : 0.8;
+    /*opacity : 0.8;*/
     background-color: #e0d193;
+    margin: 85px 5px;
+    background-image: url("img/fondarticle.jpg");
+    background-size: cover;
 }
 
 article
 {
 
-    background-color: #caf2f7;
-    opacity: 0.8;
+    background-image: url("img/fondarticle.jpg");
+    /*background-attachment: fixed;*/
+    background-size: cover;
+    background-position: center;
+    margin : 5px 5px;
+    /*opacity: 0.8;*/
+    padding : 5px;
+
 }
 
 
 .comments
 {
+
     background-color: aquamarine;
     opacity: 0.8;
 }
@@ -84,10 +104,25 @@ article
 footer
 {
     margin-top : 5px;
+    border-top : black thick  ridge ;
 }
 
 
+.row{
+    padding : 0;
 
+}
+
+.contenu
+{
+    background-color: white;
+    margin-top: 85px;
+    margin-bottom: 85px;
+    border : black thick  ridge ;
+    padding: 5px 5px;
+
+
+}
 
 
 .btnconnexion, .btndisconnexion
@@ -99,4 +134,27 @@ footer
 .btndisconnexion, .btnsupprimer
 {
     margin-left: 3px;
+}
+
+.checkbox
+{
+    margin-left: 0;
+    padding-left: 5px;
+}
+
+
+.list-group
+{
+    margin-left: 15px;
+
+}
+
+.list-group .btn
+{
+    margin-bottom: 5px;
+}
+
+.form-control
+{
+    font-size: 1.2em;
 }
