--- a/style/style.css
+++ b/style/style.css
@@ -1,58 +1,62 @@
 @font-face {
-    font-family: 'Angelface';
-    src : url('font/Angelface.otf');
-
+    font-family: "CapsuulaRegular";
+    src: url("font/Capsuula.eot?") format("eot"),
+    url("font/Capsuula.woff") format("woff"),
+    url("font/Capsuula.ttf") format("truetype"),
+    url("font/Capsuula.svg#Capsuula") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'Cursif';
-    src : url('font/Cursif.ttf');
-
+    font-family: "Enigmatic Regular";
+    src: url("font/Enigma__2.eot?") format("eot"),
+    url("font/Enigma__2.woff") format("woff"),
+    url("font/Enigma__2.ttf") format("truetype"),
+    url("font/Enigma__2.svg#Enigmatic") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
-@font-face {
-    font-family:"Cursivestandard";
-    src:url("font/Cursive_standard.eot?") format("eot"),url("font/Cursive_standard.woff") format("woff"),url("font/Cursive_standard.ttf") format("truetype"),url("font/Cursive_standard.svg#Cursivestandard") format("svg");font-weight:normal;font-style:normal;}
 
-
-@font-face {
-    font-family:"PakType Naqsh";
-    src:url("font/PakType_Naqsh_2_2.eot?") format("eot"),url("font/PakType_Naqsh_2_2.woff") format("woff"),url("font/PakType_Naqsh_2_2.ttf") format("truetype"),url("font/PakType_Naqsh_2_2.svg#PakTypeNaqsh") format("svg");font-weight:normal;font-style:normal;}
-
-body
-{
-    background-image: url("img/bookBackground.jpg");
+body {
+    background-color: #7f7f7f;
     /*width : 97vw;*/
 
 }
 
 body, .btn {
-    font-family : 'Cursivestandard', sans-serif;
+    font-family: 'CapsuulaRegular', sans-serif;
     font-size: 1.3em;
 }
 
-h1,h2,h3
-{
-    font-family: "PakType Naqsh", sans-serif ;
+h1, h2, h3 {
+    font-family: "Enigmatic Regular", sans-serif;
     font-size: 2em;
 }
 
-div
-{
-    padding : 5px;
-}
-header
-{
-    padding : 10px 0 !important;
-    margin-bottom : 5px;
-    border-bottom : black thick  ridge ;
+h2 {
+    background: linear-gradient(
+            to left,
+            transparent 50%,
+            black 100%
+    ) bottom no-repeat;
+    background-size: 100% 5px;
 }
 
-header,footer
-{
+div {
+    padding: 5px;
+}
+
+header {
+    padding: 10px 0 !important;
+    margin-bottom: 5px;
+}
+
+header, footer {
     position: fixed;
-    background : #e9e9e9;
-    padding : 10px 0;
+    background: #e9e9e9;
+    padding: 10px 0;
     z-index: 2;
     height: 75px;
     /*opacity : 0.8;*/
@@ -61,105 +65,91 @@ header,footer
 }
 
 footer {
-    bottom : 0;
+    bottom: 0;
 }
-nav
-{
+
+nav {
     /*opacity : 0.8;*/
-    background-color: #e0d193;
+    background-color: lightblue;
     margin: 85px 5px;
-    background-image: url("img/fondarticle.jpg");
     background-size: cover;
 }
 
-article
-{
+article {
 
-    background-image: url("img/fondarticle.jpg");
+    background-color: lightblue;
     /*background-attachment: fixed;*/
     background-size: cover;
     background-position: center;
-    margin : 5px 5px;
+    margin: 5px 5px;
     /*opacity: 0.8;*/
-    padding : 5px;
+    padding: 5px;
 
 }
 
 
-.comments
-{
+.comments {
 
-    background-color: aquamarine;
+    background-color: lightblue;
     opacity: 0.8;
 }
-.addComment
-{
-    background-color: #008f8f;
+
+.addComment {
+    background-color: lightblue;
     opacity: 0.8;
     margin: 10px 0;
     padding: 5px;
 
 
 }
-footer
-{
-    margin-top : 5px;
-    border-top : black thick  ridge ;
+
+footer {
+    margin-top: 5px;
 }
 
 
-.row{
-    padding : 0;
+.row {
+    padding: 0;
 
 }
 
-.contenu
-{
-    background-color: #875d08;
+.contenu {
     margin-top: 85px;
     margin-bottom: 85px;
-    border : black thick  ridge ;
     padding: 5px 5px;
 
 
 }
 
 
-.btnconnexion, .btndisconnexion
-{
-    height : 2em;
+.btnconnexion, .btndisconnexion {
+    height: 2em;
     /*margin-left: 3px;*/
 }
 
-.btndisconnexion, .btnsupprimer
-{
+.btndisconnexion, .btnsupprimer {
     margin-left: 3px;
 }
 
-.checkbox
-{
+.checkbox {
     margin-left: 0;
     padding-left: 5px;
 }
 
 
-.list-group
-{
+.list-group {
     margin-left: 15px;
 
 }
 
-.list-group .btn
-{
+.list-group .btn {
     margin-bottom: 5px;
 }
 
-.form-control
-{
+.form-control {
     font-size: 1.2em;
 }
 
-a
-{
-    color : red;
+a {
+    color: red;
 }
