--- a/style/tinymce.css
+++ b/style/tinymce.css
@@ -1,52 +1,55 @@
 @font-face {
     font-family: 'Angelface';
-    src : url('font/Angelface.otf');
+    src: url('font/Angelface.otf');
 
 }
 
 @font-face {
     font-family: 'Cursif';
-    src : url('font/Cursif.ttf');
+    src: url('font/Cursif.ttf');
 
 }
 
 @font-face {
-    font-family:"Cursivestandard";
-    src:url("font/Cursive_standard.eot?") format("eot"),url("font/Cursive_standard.woff") format("woff"),url("font/Cursive_standard.ttf") format("truetype"),url("font/Cursive_standard.svg#Cursivestandard") format("svg");font-weight:normal;font-style:normal;}
+    font-family: "Cursivestandard";
+    src: url("font/Cursive_standard.eot?") format("eot"), url("font/Cursive_standard.woff") format("woff"), url("font/Cursive_standard.ttf") format("truetype"), url("font/Cursive_standard.svg#Cursivestandard") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 @font-face {
-    font-family:"PakType Naqsh";
-    src:url("font/PakType_Naqsh_2_2.eot?") format("eot"),url("font/PakType_Naqsh_2_2.woff") format("woff"),url("font/PakType_Naqsh_2_2.ttf") format("truetype"),url("font/PakType_Naqsh_2_2.svg#PakTypeNaqsh") format("svg");font-weight:normal;font-style:normal;}
+    font-family: "PakType Naqsh";
+    src: url("font/PakType_Naqsh_2_2.eot?") format("eot"), url("font/PakType_Naqsh_2_2.woff") format("woff"), url("font/PakType_Naqsh_2_2.ttf") format("truetype"), url("font/PakType_Naqsh_2_2.svg#PakTypeNaqsh") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 
 
 body, .btn {
-    font-family : 'Cursivestandard', sans-serif;
+    font-family: 'Cursivestandard', sans-serif;
     font-size: 1.2em;
 }
 
-h1,h2,h3
-{
-    font-family: "PakType Naqsh", sans-serif ;
+h1, h2, h3 {
+    font-family: "PakType Naqsh", sans-serif;
     font-size: 2em;
 }
 
-div
-{
-    padding : 5px;
-}
-header
-{
-    padding : 10px 0 !important;
-    margin-bottom : 5px;
-    border-bottom : black thick  ridge ;
+div {
+    padding: 5px;
 }
 
-header,footer
-{
+header {
+    padding: 10px 0 !important;
+    margin-bottom: 5px;
+    border-bottom: black thick ridge;
+}
+
+header, footer {
     position: fixed;
-    background : #e9e9e9;
-    padding : 10px 0;
+    background: #e9e9e9;
+    padding: 10px 0;
     z-index: 2;
     height: 75px;
     /*opacity : 0.8;*/
@@ -55,10 +58,10 @@ header,footer
 }
 
 footer {
-    bottom : 0;
+    bottom: 0;
 }
-nav
-{
+
+nav {
     /*opacity : 0.8;*/
     background-color: #e0d193;
     margin: 85px 5px;
@@ -66,28 +69,26 @@ nav
     background-size: cover;
 }
 
-article
-{
+article {
 
     background-image: url("img/fondarticle.jpg");
     /*background-attachment: fixed;*/
     background-size: cover;
     background-position: center;
-    margin : 5px 5px;
+    margin: 5px 5px;
     /*opacity: 0.8;*/
-    padding : 5px;
+    padding: 5px;
 
 }
 
 
-.comments
-{
+.comments {
 
     background-color: aquamarine;
     opacity: 0.8;
 }
-.addComment
-{
+
+.addComment {
     background-color: #008f8f;
     opacity: 0.8;
     margin: 10px 0;
@@ -95,60 +96,53 @@ article
 
 
 }
-footer
-{
-    margin-top : 5px;
-    border-top : black thick  ridge ;
+
+footer {
+    margin-top: 5px;
+    border-top: black thick ridge;
 }
 
 
-.row{
-    padding : 0;
+.row {
+    padding: 0;
 
 }
 
-.contenu
-{
+.contenu {
     background-color: white;
     margin-top: 85px;
     margin-bottom: 85px;
-    border : black thick  ridge ;
+    border: black thick ridge;
     padding: 5px 5px;
 
 
 }
 
 
-.btnconnexion, .btndisconnexion
-{
-    height : 2em;
+.btnconnexion, .btndisconnexion {
+    height: 2em;
     /*margin-left: 3px;*/
 }
 
-.btndisconnexion, .btnsupprimer
-{
+.btndisconnexion, .btnsupprimer {
     margin-left: 3px;
 }
 
-.checkbox
-{
+.checkbox {
     margin-left: 0;
     padding-left: 5px;
 }
 
 
-.list-group
-{
+.list-group {
     margin-left: 15px;
 
 }
 
-.list-group .btn
-{
+.list-group .btn {
     margin-bottom: 5px;
 }
 
-.form-control
-{
+.form-control {
     font-size: 1.2em;
 }
