--- a/style/style.css
+++ b/style/style.css
@@ -21,13 +21,18 @@
 
 body {
     background-color: #7f7f7f;
-    /*width : 97vw;*/
+    /*font-size : 1.2em;*/
 
 }
 
 body,.btn {
     font-family: 'CapsuulaRegular', sans-serif;
+    /*font-size: 1.3em;*/
+}
+.btn
+{
     font-size: 1.3em;
+    padding: 0.15rem 0.75rem 0.375rem 0.75rem !important;
 }
 
 .btnsignal{
@@ -48,7 +53,7 @@ body,.btn {
 
 h1, h2, h3 {
     font-family: "Enigmatic Regular", sans-serif;
-    font-size: 2em;
+
 }
 
 h2 {
@@ -77,7 +82,7 @@ header, footer {
     background: #e9e9e9;
     padding: 10px 0;
     z-index: 2;
-    height: 75px;
+    /*height: 75px;*/
     /*opacity : 0.8;*/
     margin-bottom: 0;
 
@@ -122,15 +127,19 @@ article {
 
 }
 
+.gestion
+{
+    background-color: lightblue;
+}
 footer {
     margin-top: 5px;
 }
 
 
-.row {
-    padding: 0;
+/*.row {*/
+    /*padding: 0;*/
 
-}
+/*}*/
 
 .contenu {
     margin-top: 85px;
@@ -150,10 +159,10 @@ footer {
     margin-left: 3px;
 }
 
-.checkbox {
-    margin-left: 0;
-    padding-left: 5px;
-}
+/*.checkbox {*/
+    /*margin-left: 0;*/
+    /*padding-left: 5px;*/
+/*}*/
 
 
 .list-group {
@@ -196,4 +205,9 @@ max-height: 400px;
     margin-left : 0 ;
     /*margin-right: 0 !important;*/
    
+}
+
+.gstctn
+{
+    padding-left: 0;
 }
