--- a/style/style.css
+++ b/style/style.css
@@ -69,44 +69,49 @@ div {
     padding: 5px;
 }
 
+.navbar-brand{
+    font-size: 0.8em !important;
+}
 header {
 
     padding: 10px 0 !important;
-    margin-bottom: 5px;
+    margin-bottom: 85px !important;
     top : 0;
+    /*font-size : 1.3em !important;*/
 }
 
+.navbar{
+    background: #e9e9e9;
+}
 header, footer {
     position: fixed;
 
     background: #e9e9e9;
     padding: 10px 0;
     z-index: 2;
-    /*height: 75px;*/
-    /*opacity : 0.8;*/
     margin-bottom: 0;
 
 }
+
 
 footer {
     bottom: 0;
 }
 
 nav {
-    /*opacity : 0.8;*/
+
     background-color: lightblue;
-    margin: 85px 5px;
+
     background-size: cover;
 }
 
 article {
 
     background-color: lightblue;
-    /*background-attachment: fixed;*/
+
     background-size: cover;
     background-position: center;
     margin: 5px 5px;
-    /*opacity: 0.8;*/
     padding: 5px;
 
 }
@@ -136,11 +141,6 @@ footer {
 }
 
 
-/*.row {*/
-    /*padding: 0;*/
-
-/*}*/
-
 .contenu {
     margin-top: 85px;
     margin-bottom: 85px;
@@ -159,10 +159,6 @@ footer {
     margin-left: 3px;
 }
 
-/*.checkbox {*/
-    /*margin-left: 0;*/
-    /*padding-left: 5px;*/
-/*}*/
 
 
 .list-group {
@@ -186,8 +182,6 @@ a {
 {
 max-width :200px;
 max-height: 400px;
-    /*width : auto;*/
-    /*height: auto;*/
 
 }
 
@@ -195,15 +189,12 @@ max-height: 400px;
 {
     max-width :400px;
     max-height: 500px;
-    /*width : auto;*/
-    /*height: auto;*/
 
 }
 
 .artfrt
 {
     margin-left : 0 ;
-    /*margin-right: 0 !important;*/
    
 }
 
@@ -215,4 +206,9 @@ max-height: 400px;
 .msgerror {
     color: red;
     font-weight: bold;
+}
+
+
+button a{
+    color : white!important;
 }
