--- a/style/style.css
+++ b/style/style.css
@@ -122,10 +122,6 @@ article {
 
 
 
-.gestion
-{
-    background-color: lightblue;
-}
 footer {
     margin-top: 5px;
 }
@@ -164,13 +160,6 @@ footer {
     font-size: 1.2em;
 }
 
-
-.image_homepage
-{
-max-height: 400px;
-
-}
-
 .image_post
 {
     max-width :400px;
@@ -205,8 +194,8 @@ button a{
 }
 
 .row{
-    margin-left: 0px !important;
-    margin-right: 0px !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 
