--- a/style/style.css
+++ b/style/style.css
@@ -29,8 +29,6 @@ body, .btn {
 
 header, footer {
     position: fixed;
-
-    background: #e9e9e9;
     padding: 10px 0;
     z-index: 2;
     margin-bottom: 0;
@@ -46,6 +44,7 @@ header {
 footer {
     bottom: 0;
     margin-top: 5px;
+    background-color: #FFFFFF;
 }
 
 div {
@@ -58,8 +57,9 @@ div {
     margin-right: 0 !important;
 }
 
-h1, h2 {
+h1, h2, .navbar-brand,.card-header a {
     font-size: 1.8rem !important;
+    color: #3D83C9 !important;
 }
 
 h1, h2, h3 {
@@ -83,7 +83,7 @@ h2 {
 
 
 .navbar {
-    background: #e9e9e9;
+    background: #FFFFFF !important;
 }
 
 .nav-item {
@@ -94,6 +94,9 @@ h2 {
     flex-grow: 0;
 }
 
+.nav-link{
+
+}
 
 .contenu {
     margin-top: 85px;
@@ -104,6 +107,12 @@ h2 {
 .btn {
     font-size: 1.3em;
     padding: 0.15rem 0.75rem 0.375rem 0.75rem !important;
+
+}
+
+.btn-primary{
+    background-color: #3D83C9;
+    border-color: #3D83C9;
 }
 
 .btnsignal {
@@ -149,6 +158,10 @@ button a {
     font-size: 1.2em;
 }
 
+.form-group{
+    padding : 0;
+}
+
 input, textarea {
     border: 3px solid #adb3b9 !important;
 
@@ -169,7 +182,7 @@ input, textarea {
 
 .card-header {
     color: #007BFF;
-    background-color: #cbf5ff;
+    background-color: #e8fffd;
 }
 
 .card-date {
