--- a/style/style.css
+++ b/style/style.css
@@ -173,6 +173,16 @@ input, textarea {
 }
 
 
+.msgerrorComment {
+    color: red;
+    font-weight: bold;
+    background: white;
+    border : 1px solid black;
+    padding : 5px;
+    font-size : 1.2em;
+    text-align: center;
+}
+
 .card {
     margin-bottom: 5px;
     padding-top: 0;
